--- a/PhotoDemo/Info.plist
+++ b/PhotoDemo/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To allow you to share your photo</string>
 </dict>
 </plist>
